<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="10dip"
                android:text="@string/tag_data" />

            <Button
                android:id="@+id/borrow_data_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:singleLine="true" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/borrow_payee_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="10dip"
                android:text="@string/tag_borrower" />

            <Button
                android:id="@+id/borrow_user_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:singleLine="true" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="10dip"
                android:text="@string/tag_borrwo_money" />

            <EditText
                android:id="@+id/borrow_money_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:hint="@string/zero"
                android:inputType="numberDecimal"
                android:singleLine="true" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="10dip"
                android:text="@string/tag_have_paid" />

            <EditText
                android:id="@+id/havepaid_money_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:hint="@string/zero"
                android:inputType="numberDecimal"
                android:singleLine="true" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="10dip"
                android:text="@string/tag_category" />

            <Button
                android:id="@+id/category_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:singleLine="true" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/comments_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tag_comments"
        android:singleLine="true" />

    <include layout="@layout/view_account_layout" />

</LinearLayout>